old-java/scheduler/log
AgentSchedulingThread.java:121: error: incompatible types: possible lossy conversion from long to int
                    int next = nextFreeBigCore(matrix[i].timestamp);
                                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
